fix align rewards container when few rewards + scale width for share/claim button

--- a/src/TicketAllResults.css
+++ b/src/TicketAllResults.css
@@ -75,6 +75,7 @@
 .sa_rewards-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(auto-fill, minmax(48px, 1fr));
     gap: 16px;
     height: calc(100% - 32px);
     overflow-y: auto;
@@ -158,7 +159,7 @@
 
 .sa_share-story-button,
 .sa_claim-all-button {
-    width: 100%;
+    width: 90%;
     height: 40px;
     border-radius: 8px;
     font-family: "PP Neue Machina";
